src/other/mico-2.3.12/test/idl/error/case9.idl

/*
 * Duplicate member in struct.
 */

struct S {
  long a;
  char a;
};
